Integrated architecture to resource app

--- a/public/templates/videos/videoItemView.html
+++ b/public/templates/videos/videoItemView.html
@@ -1,3 +1,13 @@
-<img src="" alt="" style="width: 160px; height: 120px;" />
-<h3>Title</h3>
-<p>4 min.</p>
+<a class="play-now play-now5" href="video-player.html" style="display: none;">
+    <img src="img/play-now.png">
+</a>
+<a class="watch-later watch-later5" href="success.html" style="display: none;">
+    <img src="img/watch-later.png">
+</a>
+<a class="vid-thumb-overlay" href="video-player.html">
+    <div class="vid-thumb-bg vid-thumb-bg5">
+        <img src=<%= imageUrl %> style="opacity: 1;">
+    </div>
+</a>
+<h3><%= topic %></h3>
+<p><%= duration %></p>
