--- a/public/templates/videos/videosLayout.html
+++ b/public/templates/videos/videosLayout.html
@@ -1,4 +1,7 @@
-<div>
-	<h1>Recommended</h1>
-	<div id="videos"></div>
+<div class="wide-container resources">
+    <div class="resource-list-heading">
+        <h2>Recommended (<span id="allCount">0</span>)</h2>
+        <a class="view-more" href="#">View 0 more<img src="img/view-more-arrow.png"></a>
+    </div>
+    <div id="videos"></div>
 </div>
