Changed classNames to widen the iframe window.

--- a/public/templates/videos/videosLayout.html
+++ b/public/templates/videos/videosLayout.html
@@ -1,4 +1,4 @@
-<div class="wide-container resources">
+<div class="wide-container-fluid resources">
     <div class="resource-list-heading">
 	<h2>Recommendeds (<span id="allCount">0</span>)</h2>
         <a class="view-more" href="#">View 0 more<img src="img/view-more-arrow.png"></a>
