--- a/public/css/custom/videos/styles.css
+++ b/public/css/custom/videos/styles.css
@@ -109,17 +109,21 @@ p {
     font-weight: normal;
     line-height: 28px;
 }
+html, body {
+    overflow-x : hidden;
+}
 #peek {
-    width: 350px;
-    float: right;
-    position: absolute;
-    left: -355px;
-    background-color: #99FFCC;
-    opacity: .75;
-    padding: 1em;
-    color: #003300;
-    font-weight: 300;
-    z-index: 100;
+    width : 200px;
+    float : right;
+    position : absolute;
+    left : -205px;
+    background-color : #99FFCC;
+    opacity : .75;
+    padding : 1em;
+    color : #003300;
+    font-family :'Avenir LT W01 65 Medium', 'AvenirLTW01-65MediumObl', 'Avenir LT W01 85 Heavy', 'AvenirLTW01-85HeavyObli', 'Avenir', 'helvetica neue', helvetica, arial, sans-serif;
+    font-weight : 300;
+    z-index : 100;
 }
 .lLink {
     text-decoration: none !important;
