coding standards review

--- a/public/css/custom/videos/styleColors.less
+++ b/public/css/custom/videos/styleColors.less
@@ -1,8 +1,9 @@
 //variables for colors
 
-@purple-medium: #4B505C;
-@gray: #8A8D94;
-@blue-light: #3DADEF;
-@green-lime: #99FFCC;
-@black-light: #003300;
-@black: #000000;
+@purple-medium : #4B505C;
+@gray          : #8A8D94;
+@blue-light    : #3DADEF;
+@green-lime    : #99FFCC;
+@black-light   : #003300;
+@black         : #000000;
+@white         : #F3F5F6;
