--- a/public/templates/videos/videosLayout.html
+++ b/public/templates/videos/videosLayout.html
@@ -1,7 +1,7 @@
 <div class="wide-container-fluid resources">
-    <div class="resource-list-heading">
-	<h2>Recommendeds (<span id="allCount">0</span>)</h2>
-        <a class="view-more" href="#">View 0 more<img src="img/view-more-arrow.png"></a>
-    </div>
-    <div id="videos"></div>
+		<div class="resource-list-heading">
+	<h2>Recommendeds (<span id="all-count">0</span>)</h2>
+				<a class="view-more" href="#">View 0 more<img src="img/view-more-arrow.png"></a>
+		</div>
+		<div id="videos"></div>
 </div>
